mild font fix (problem on mobile)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
   justify-content: space-evenly;
   align-items: center;
   font-family: "Roboto", sans-serif;
-  font-weight: 100;
+  font-weight: 300;
   font-size: 16px;
   letter-spacing: 1px;
   border-bottom: 1px solid silver;
