--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -3,7 +3,7 @@
 .post {
   font-size: 18px;
   line-height: 30px;
-  font-weight: 200;
+  font-weight: 300;
 }
 
 .post-content {
