--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ body {
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
     line-height: 26px;
-    font-weight: 200;
+    font-weight: 300;
     // background-color: #fafafa;
     margin: 0;
 }
